service_implement_completed

--- a/Coban/Coban.API/Coban.API.csproj
+++ b/Coban/Coban.API/Coban.API.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Coban.Data\Coban.Data.csproj" />
+    <ProjectReference Include="..\Coban.Service\Coban.Service.csproj" />
   </ItemGroup>
 
 
