--- a/Coban/Coban.Core/Coban.Core.csproj
+++ b/Coban/Coban.Core/Coban.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Coban.SharedLibrary\Coban.SharedLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
